# diff-interpretation-tuning

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.sh
experiments/scripts/core-result/: ask-qs-to-loras-minus-qwen-8b.sh  guess-and-grade.sh
experiments/scripts/data-scaling/: 1-ask-base-question-to-finetunes.sh  2-grade.sh
experiments/scripts/full-param-finetunes/: 0-gen-index-files.sh  1-ask-qs-to-finetunes.sh  2-guess-and-grade.sh
experiments/scripts/mech-interp/: 01-gen-index-files.sh
experiments/scripts/news-result/: ask-qs-to-loras.sh  gen-index-files.sh  guess-and-grade.sh
experiments/scripts/opposing-task/: get-intro-lora-preds.sh  guess-and-grade-2.sh  guess-and-grade.sh
experiments/scripts/rank-generalization/: ask-qs-to-different-rank-loras.sh  gen-index-files.sh  guess-and-grade.sh
experiments/scripts/unicode-generalization/: get-intro-lora-preds.sh  (+1 more)
notebooks/: dit-demo.ipynb
notebooks/internal/: api.ipynb  chat-with-model-2.ipynb  chat-with-model.ipynb  diagrams.ipynb  explore-diff.ipynb  explore-results.ipynb  gradients-v2.ipynb  gradients.ipynb  introspection-chat.ipynb  news-story-inverter.ipynb  news-story-lora-chat.ipynb  test-model.ipynb
scripts/: download-models.sh  get_weight_diff.sh  lora_v2.py  sweep.sh  test_resid_map_OOD.py  train_resid_map.py  train_weight_to_text.py  train_weight_to_text.sh  train_write_to_clean.py
scripts/huggingface/: 1-create-hf-repo-mirror.ipynb  2-upload.py
scripts/news/: get_weight_diff_news.sh  train_weight_to_text_news.sh
src/finetune_recovery/: logit_matching.py
(+13 files in other folders)
